src/test/deca/context/valid/custom/object/class_new_object.deca
class Car {
    protected int maxSpeed;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed(int newSpeed) {
        return maxSpeed;
    }
}

{
    Car car1 = new Car();
}