src/test/deca/context/invalid/custom/object/decl_class_method_asm.deca
class Car {
    protected int maxSpeed;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed(int newSpeed) {
            return maxSpeed;
    }

    void methodAsm() asm(4);
}